--- a/react/rbvite/src/index.css
+++ b/react/rbvite/src/index.css
@@ -66,3 +66,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+ul {
+  list-style: none;
+}
+
+.border {
+  border: 1px solid red;
+}
