--- a/react/rbvite/src/index.css
+++ b/react/rbvite/src/index.css
@@ -74,3 +74,13 @@ ul {
 .border {
   border: 1px solid red;
 }
+
+.p-sm {
+  padding: 0 0.1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.w-sm {
+  width: 5rem;
+}
