--- a/react/rbvite/src/index.css
+++ b/react/rbvite/src/index.css
@@ -78,9 +78,9 @@ ul {
 .p-sm {
   padding: 0 0.1rem;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .w-sm {
-  width: 5rem;
+  margin-left: 0.5rem;
+  width: 4rem;
 }
